fix wrapping subsections in home

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -28,6 +28,10 @@ a {
     justify-content: center;
 }
 
+.row-wrap-reverse {
+    flex-wrap:wrap-reverse;
+}
+
 .text-center {
     text-align: center;
 }
